feat: Separate independent server-side API
