# doc/openapi.yaml
@@ -22,6 +22,13 @@ components:
       required: true
       schema:
         type: string
+    HeaderAuthorizationService:
+      in: header
+      name: Authorization
+      description: 'JWT Token, 格式如: `Bearer xxx`'
+      required: true
+      schema:
+        type: string
     HeaderAuthorizationOpenTrust:
       in: header
       name: Authorization
@@ -235,7 +242,7 @@ paths:
         - $ref: "#/components/parameters/QueryProduct"
         - in: query
           name: client
-          description: 客户端标识，例如 web、ios、android、windows、macos
+          description: 客户端标识，例如 web、ios、android、desktop
           required: false
           schema:
             type: string
@@ -262,3 +269,34 @@ paths:
       responses:
         '200':
           $ref: "#/components/responses/MyLabelsRes"
+  /api/v1/users/{uid}/settings:unionAll:
+    get:
+      tags:
+        - User
+      summary: 获取 user 的所有 settings 信息
+      parameters:
+        - $ref: '#/components/parameters/HeaderAuthorizationService'
+        - $ref: "#/components/parameters/QueryProduct"
+        - in: path
+          name: uid
+          description: 用户 uid
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: client
+          description: 客户端标识，例如 web、ios、android、desktop
+          required: false
+          schema:
+            type: string
+        - in: query
+          name: channel
+          description: 客户端渠道，例如 stable、beta、dev
+          required: false
+          schema:
+            type: string
+        - $ref: "#/components/parameters/QueryPageSize"
+        - $ref: "#/components/parameters/QueryPageToken"           
+      responses:
+        '200':
+          $ref: "#/components/responses/MySettingsRes"
